# scorpio-example

./: CMakeLists.txt  README.md  create-env.sh  env.yaml  load-env.sh  peru.yaml  repo.yaml
mpas-o-scorpio/: repo.yaml
src/: CMakeLists.txt  consumer.cpp  prod-con.cpp  prod-con.hpp  producer.cpp
